Tracker: Fix comment buttons were always visible

--- a/templates/default/app.css
+++ b/templates/default/app.css
@@ -110,11 +110,11 @@ label.tracker_trIdEdit:before { content: "#"; }
     display: none
 }
 
-#tracker-edit_tracker-edit-comments .et2_toolbar.hide_buttons .et2_button {
+#tracker-edit_tracker-edit-comments .et2_toolbar.hide_buttons et2-button {
     display: none !important;
 }
 
-#tracker-edit_tracker-edit-comments .et2_button .et2_vfs_btn {
+#tracker-edit_tracker-edit-comments et2-button .et2_vfs_btn {
     float: left;
 }
 
