--- a/templates/mobile/app.css
+++ b/templates/mobile/app.css
@@ -171,10 +171,10 @@ label.tracker_trIdEdit:before {
 #tracker-edit_tracker-edit-comments .et2_vfs .progress {
   display: none;
 }
-#tracker-edit_tracker-edit-comments .et2_toolbar.hide_buttons .et2_button {
+#tracker-edit_tracker-edit-comments .et2_toolbar.hide_buttons et2-button {
   display: none !important;
 }
-#tracker-edit_tracker-edit-comments .et2_button .et2_vfs_btn {
+#tracker-edit_tracker-edit-comments et2-button .et2_vfs_btn {
   float: left;
 }
 #tracker-index_tracker-index-queue {
